# pcloud

./: .env  .gitignore  Cargo.toml  LICENSE
migrations/2021-01-05-184914_users/: up.sql
pcloud/: Cargo.toml
pcloud/src/: main.rs  redirect.rs
pcloud_server/: Cargo.toml  README.md
pcloud_server/src/: main.rs  redirect.rs  types.rs
src/: files.rs  main.rs  models.rs  private.rs  public.rs  schema.rs  users.rs
storage/public/: index.html
templates/: directory.hbs
