[package]
name = "pcloud"
version = "0.1.0"
authors = ["mahonec <mahonec@clarkson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.8"
rand = "0.8.1"
time = "0.1.40"