[package]
name = "pcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
url = "2.2.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
regex = "1.6.0"

# local dependencies 
pcloud_server = { path = "../pcloud_server" }